results/SpecGenBench/4-shot/log-UniqueChar-2023_11_05_21_52_58.txt
import java.util.HashMap;
import java.util.Map;

class UniqueChar {
    //@ requires (\forall int i; 0 <= i && i < s.length(); (int)Character.MIN_VALUE <= (int)s.charAt(i) && (int)s.charAt(i) <= (int)Character.MAX_VALUE);
    //@ ensures \result == -1 || (0 <= \result && \result < s.length());
    public int firstUniqChar(String s) {
        Map<Character, Integer> frequency = new HashMap<Character, Integer>();
        //@ maintaining (\forall int i; 0 <= i && i < s.length(); frequency.containsKey(s.charAt(i)));
        //@ maintaining (\forall int i; 0 <= i && i < s.length(); frequency.get(s.charAt(i)) >= 0);
        //@ maintaining (\forall int i; 0 <= i && i < s.length(); frequency.get(s.charAt(i)) <= i+1);
        //@ decreases s.length() - i;
        for (int i = 0; i < s.length(); ++i) {
            char ch = s.charAt(i);
            frequency.put(ch, frequency.getOrDefault(ch, 0) + 1);
        }
        //@ maintaining -1 <= i && i <= s.length();
        //@ maintaining (\forall int j; 0 <= j && j < i; frequency.get(s.charAt(j)) != 1);
        //@ decreases s.length() - i;
        for (int i = 0; i < s.length(); ++i) {
            if (frequency.get(s.charAt(i)) == 1) {
                return i;
            }
        }
        return -1;
    }
}
/home/max/Documents/JMLGPT/tmp/UniqueChar.java:9: error: variable i is already defined in method firstUniqChar(String)
        //@ maintaining (\forall int i; 0 <= i && i < s.length(); frequency.containsKey(s.charAt(i)));
                                     ^
/home/max/Documents/JMLGPT/tmp/UniqueChar.java:10: error: variable i is already defined in method firstUniqChar(String)
        //@ maintaining (\forall int i; 0 <= i && i < s.length(); frequency.get(s.charAt(i)) >= 0);
                                     ^
/home/max/Documents/JMLGPT/tmp/UniqueChar.java:11: error: variable i is already defined in method firstUniqChar(String)
        //@ maintaining (\forall int i; 0 <= i && i < s.length(); frequency.get(s.charAt(i)) <= i+1);
                                     ^
3 errors

